# evernote-cli

./: .env.example  .gitignore  README.md  pyproject.toml
evnote/: cache.py  cli.py  client.py  executor.py  inventory.py  planner.py  rules.py
rules/: android-split.yaml  dev-reorg.yaml  example.yaml  safety-test.yaml
scripts/: oauth_login.py
tests/: test_cli.py  test_planner.py
