[project]
name = "evnote"
version = "0.1.0"
description = "CLI for fetching and reorganizing Evernote notes in-place"
requires-python = ">=3.10"
dependencies = [
    "evernote-plus>=1.25.5",
    "evernote-backup>=1.13",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.2.1",
]

[project.scripts]
evnote = "evnote.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evnote"]
